--- a/src/task-03.html
+++ b/src/task-03.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
     <link rel="stylesheet" href="css/common.css" />
+    <style>
+      .gallery {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+        list-style-type: none;
+      }
+      .gallery > li > img {
+        width: 400px;
+        height: 250px;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
